<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mortgage Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="amount_borrowed">Amount Borrowed:    $</string>
    <string name="amount">0</string>
    <string name="interest_rate">Interest Rate:</string>
    <string name="loan_term">Loan Term:</string>
    <string name="loan_term15">15yrs</string>
    <string name="loan_term20">20yrs</string>
    <string name="loan_term30">30yrs</string>
    <string name="calculate">Calculate</string>
    <string name="monthly_payement">Monthly Payement =    $</string>
    <string name="result">0.0</string>
    <string name="tax">Add Tax and Insurance</string>
    <string name="image_button">image</string>
    <string name="clear">Reset</string>
    <string name="email">email</string>
    <string name="percentage">%</string>
    <string name="relative_layout">Relative Layout</string>

</resources>
