<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Khaki"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="24sp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="30dp"
        android:layout_toRightOf="@id/textView4"
        android:gravity="right"
        android:text="@string/result"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentLeft="true"
        android:text="@string/amount_borrowed"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/editText"
        android:layout_marginTop="24dp"
        android:gravity="left"
        android:text="@string/interest_rate"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:drawableLeft="@drawable/calc"
        android:text="@string/calculate"
        android:textSize="20sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:max="200"
        android:progress="100" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seek"
        android:layout_below="@+id/seekBar1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/loan_term15" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term20"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term30"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_marginBottom="60dp"
        android:text="@string/loan_term"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="18dp"
        android:text="@string/tax" 
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:drawableLeft="@drawable/reset"
        android:text="@string/clear"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="19dp"
        android:text="@string/monthly_payement"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/textView4"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/amount_borrowed"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/seek"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/button2"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/seek"
        android:layout_alignBottom="@+id/seek"
        android:layout_alignRight="@+id/seek"
        android:text="@string/percentage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

</RelativeLayout>